# Nexus

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  DEVELOPMENT.md  INIT.md  LICENSE  README.md  REVIEW.md  bench-baseline.json  bootstrap.sh  build.rs  flake.nix  header.sh  lsp.wasm  nexus  nexus.wasm  nxc_driver  nxc_driver.wasm  stdlib
.github/: FUNDING.yml
.github/workflows/: build-deps.yml  ci.yml  docs.yml  release.yml
ai-logs/: 01-setup.md  02-parser-complete.md  03-let-polymorphism.md  04-robust-let-poly.md  05-ast-tests.md  06-rank2-rejection.md  07-theorems-testing.md
bootstrap/: Cargo.toml  build.rs
bootstrap/src/: constants.rs  main.rs  types.rs
bootstrap/tests/: PORT_SKIPPED.md
docs/: _config.yml  bootstrap-test-port-plan-dvr6.6.md  cli.md  design.md  glossary.md  index.md  index_root.md  parity-audit-dvr6.7.md  refactor_baseline.md  versions.json
docs/_includes/: head-custom.html
docs/_layouts/: default.html  landing.html
docs/_plugins/: nexus_highlight.rb
docs/adr/: 0001-hir-lir-cli-surface.md  0001-seed-policy.md  0002-4-stage-bootstrap-model.md  0002-port-skipped-rationale.md  0003-polyglot-runner-host-shell-driven-tests.md  0004-lazy-parallel-wasi-threads.md  0005-linearity-strategy-a-try-catch-frame-stack.md  0006-coeffect-over-algebraic-effects.md  0007-port-to-cap-terminology.md  0008-wasi-preview3-migration.md  0009-memo-plan-arena-heap-mark-reset.md  0010-hir-visibility-cross-module.md
docs/env/: cli.md  ffi.md  runtime.md  stdlib.md  tools.md  wasm.md
docs/security/: dns-rebinding-mitigation.md
docs/spec/: basics.md  concurrency.md  effect_system.md  effects.md  exception-groups.md  exceptions-and-lazy.md  lazy.md  memory.md  references.md  runtime.md  semantics.md  stdlib.md  syntax.md  type-system-formal.md  types.md
examples/: INDEX.md  README.md  bench_parallel.nx  di_cap.nx  di_port.nx  fib.nx  file_access.nx  hello.nx  http_healthcheck.nx  index.json  index.schema.json  math.nx  module_test.nx  network_access.nx  user_registry.nx  web_client.nx  web_server.nx
examples/feature/: bench_arith.nx  bench_list_sum.nx  bytebuffer_basics.nx  char_basics.nx  clock_basics.nx  effects_console_fs.nx  env_basics.nx  exception_group.nx  exn_todo.nx  ffi.nx  generics_poly_fn.nx  handler_basic.nx  hashmap_basics.nx  if_expression.nx  import_forms.nx  json_basics.nx  lazy_force.nx  lazy_parallel.nx  let_destructure.nx  linear_borrow.nx  linear_consume.nx  linear_thread.nx  list_basics.nx  log_basics.nx  match_basics.nx  match_guards_or.nx  match_nested.nx  math_basics.nx  mutable_ref.nx  network_request.nx  option_basics.nx  pbt_basics.nx  proc_argv.nx  rand_basics.nx  record_destructure.nx  recursive_loop.nx  regexp_basics.nx  result_basics.nx  str_basics.nx  stringmap_basics.nx  (+2 more)
examples/negative/: handler_arm_captures_ref.nx  hashmap_missing_key.nx  import_module_not_found.nx  json_parse_invalid.nx  lazy_double_force.nx  lazy_unforced.nx  linear_unused.nx  main_wrong_return.nx  math_div_by_zero.nx  missing_argument.nx  option_unwrap_none.nx  regexp_invalid_pattern.nx  (+7 more)
nxc/: ast.nx  codegen.nx  driver.nx  driver_new.nx  hir.nx  lexer.nx  lir.nx  mir.nx  nxc  parser.nx  repl.nx  resolve.nx  symtab.nx  token.nx  typecheck.nx
nxlib/: jsonrpc.nx  stdlib.wasm
scripts/: reorder_stdlib_imports.py
src/: artifact.rs  ast.rs  cli.rs  constants.rs  context.nx  driver.nx  driver.rs  explain.nx  fmt.nx  intern.rs  lib.rs  main.nx  main.rs  nxc_cache.rs  parser.rs  pipeline.nx  repl.nx  repl.rs  test_runner.nx  typecheck.rs  types.rs
src/lib/stdlib_bundle/: Cargo.toml
src/lib/stdlib_bundle/.cargo/: config.toml
src/lib/stdlib_bundle/src/: component.rs  legacy.rs  lib.rs
src/lib/stdlib_bundle/wit/: world.wit
tests/: anf_lowering.rs  array.rs  array_tests.rs  ast_property.rs  ast_property_tests.rs  ast_typecheck.rs  ast_typecheck_tests.rs  capability.rs  clock.rs  codegen.rs  concurrency.rs  effect.rs  effect_tests.rs  exhaustiveness.rs  exhaustiveness_tests.rs  exn.rs  ffi.rs  float.rs  float_tests.rs  fs.rs  function_value.rs  function_value_tests.rs  hashmap.rs  integration.rs  linear.rs  linear_tests.rs  list.rs  module.rs  module_tests.rs  net_server.rs  pass_hir.rs  passing_test.nx  port.rs  port_tests.rs  proc.rs  proptest_type_effect_tests.rs  random.rs  record.rs  record_tests.rs  ref_tests.rs  (+10 more)
tree-sitter/: grammar.js
tree-sitter-nexus/: grammar.js  tree-sitter.json
(+2995 files in other folders)
