[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.4.1"
rustyline = "17.0.2"
wasmtime = "41.0.3"
wasmtime-wasi = "41.0.3"
wasmtime-wasi-http = "41.0.3"
wasm-encoder = "0.240.0"
wasmparser = "0.240.0"
clap = { version = "4.5.31", features = ["derive"] }
wasi-preview1-component-adapter-provider = "41.0.3"
wit-component = "0.243.0"
wit-parser = "0.243.0"
wasm-compose = "0.243.0"
ureq = "3.2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.1"
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["glob"] }
