[package]
name = "nexus_stdlib_bundle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nexus_wasm_alloc = { path = "../wasm_alloc" }
nexus_stdio_wasm = { path = "../stdio", features = ["no_alloc_export"] }
nexus_string_wasm = { path = "../string", features = ["no_alloc_export"] }
nexus_net_wasm = { path = "../net", features = ["no_alloc_export"] }
nexus_core_wasm = { path = "../core", features = ["no_alloc_export"] }
nexus_math_wasm = { path = "../math", features = ["no_alloc_export"] }
nexus_fs_wasm = { path = "../fs", features = ["no_alloc_export"] }
nexus_random_wasm = { path = "../random" }
nexus_clock_wasm = { path = "../clock" }
nexus_proc_wasm = { path = "../proc", features = ["no_alloc_export"] }
nexus_collection_wasm = { path = "../collection", features = ["no_alloc_export"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
